[package]
edition = "2024"
name = "fiverr-message-checker"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
figment = { version = "0.10.19", features = ["yaml"] }
flexi_logger = "0.29.8"
headless_chrome = "1.0"
log = "0.4.26"
regex = {version = "1.11.1"}
serde = { version = "1.0.219", features = ["derive"] }
sqlx = {version = "0.8.3", features = ["postgres", "runtime-tokio", "time"]}
thiserror = "2.0.12"
tokio = {version = "1", features = ["full"]}
url = "2.5.4"
